--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,6 @@ dist-ssr
 # Local Netlify folder
 .netlify
 
-.notas
+
+sakuna-yuji-itadori-jujutsu-kaisen_3840x2160_xtrafondos.com.jpg
+public/notas.text
